<resources>
    <string name="app_name">RollResults</string>
    <string name="intro_title">RollResults</string>
    <string name="intro_text">Quickly and easily accessing \nacademic results!</string>
    <string name="background_image">Background</string>
    <string name="login_welcome">Let’s get something</string>
    <string name="login_greet">Good to see you back</string>
    <string name="login_btn">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register!</string>
    <string name="signup_welcome">Getting started</string>
    <string name="signup_greet">Create account to continue!</string>
    <string name="login_link">Log In</string>
    <string name="signup_btn">Register</string>
    <string name="profile_setup">Complete Your Profile</string>
    <string name="setup_description">Kindly provide your details to set up your account.</string>
    <string name="complete_setup">Complete Registration</string>
    <string name="complete_registration">Complete Registration</string>


    <!-- Other string resources -->
    <string-array name="semesters">
        <item>1st Semester</item>
        <item>2nd Semester</item>
        <item>3rd Semester</item>
        <item>4th Semester</item>
        <item>5th Semester</item>
    </string-array>

</resources>